--- a/.circle/.config.yml
+++ b/.circle/.config.yml
@@ -7,25 +7,24 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: npm-cache-({ checksum "package-lock.json" })
+          key: npm-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Install Dependencies
-          command: npm  install
+          command: npm install
       - save_cache:
-        paths:
-          - ~/.npm
-        key: npm-cache-({ checksum "package-lock.json" })
+          paths:
+            - ~/.npm
+          key: npm-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Building the application
           command: npm run build:prod
       - run:
           name: Install ChromeHeadless
-          command:
+          command: |
             sudo apt-get update
             sudo apt-get install -y libappindicator1 fonts-liberation libu2f-udev libvulkan1
-            wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd.deb
-            sudo dpkg -i google-stable_current_amd64.deb
-            sudo apt-get install -f
+            wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+            sudo dpkg -i google-chrome-stable_current_amd64.deb || sudo apt-get install -f
       - run:
           name: Run test cases
           command: npm run test:headless
@@ -34,28 +33,26 @@ jobs:
       - persist_to_workspace:
           root: ~/project
           paths:
-          - dist
-          - node_modules/
+            - dist
+            - node_modules/
       - run:
-          name: install AWS openssh-client
-          command:
+          name: install AWS CLI
+          command: |
+            sudo apt-get install -y unzip
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
             unzip awscliv2.zip
             sudo ./aws/install
-      - run: 
+      - run:
           name: Deploy to S3
-          command:
+          command: |
             DIST_OUTPUT_DIR=$(find dist -maxdepth 1 -type d | awk 'NR==2')
-            aws s3 sync ${DIST_OUTPUT_DIR}/browser/ s3://$S3_BUCKET_NAME --delete
+            aws s3 sync ${DIST_OUTPUT_DIR}/ s3://$S3_BUCKET_NAME --delete
 
 workflows:
   version: 2
   build_test_deploy:
     jobs:
-      # - test
       - build-prod:
-          # requires:
-          # - test
           filters:
             branches:
               only:
