--- a/.circle/.config.yml
+++ b/.circle/.config.yml
@@ -25,6 +25,7 @@ jobs:
             sudo apt-get install -y libappindicator1 fonts-liberation libu2f-udev libvulkan1
             wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
             sudo dpkg -i google-chrome-stable_current_amd64.deb || sudo apt-get install -f
+            export CHROME_BIN=/usr/bin/google-chrome-stable
       - run:
           name: Run test cases
           command: npm test --passWithNoTests
